--- a/smfellow.html
+++ b/smfellow.html
@@ -1,6 +1,9 @@
 <html>
 <head>
-  <title>OpenLayers Example</title>
+<!--Autor: betogrun -->
+<!--Email: betogrun at gmai.com -->
+
+  <title>SmartFellow</title>
 <link rel="stylesheet" href="OpenLayers-2.7/theme/default/style.css" type="text/css" />
  	   <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA2yxX3K8yOD8C7jGoWmfashTZPJeBVpj0aGKSYFIngZKgg2s-CRRN3yk1-F7pxLmRA4OFNl6ahX4idg"
       type="text/javascript"></script>
@@ -61,7 +64,7 @@
        }
      }
    
-   handler.open("GET", "/cgi-bin/php_teste_gpsd1.php", true);
+   handler.open("GET", "/gpsdmp.php", true);
    handler.setRequestHeader("Cache-Control", "no-store, no-cache, must-revalidate");
    handler.setRequestHeader("Cache-Control", "post-check=0, pre-check=0");
    handler.setRequestHeader("Pragma", "no-cache");
