--- a/smfellow.html
+++ b/smfellow.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <!--Autor: betogrun -->
-<!--Email: betogrun at gmai.com -->
+<!--E-mail: betogrun at gmail dot com -->
 
   <title>SmartFellow</title>
 <link rel="stylesheet" href="OpenLayers-2.7/theme/default/style.css" type="text/css" />
- 	   <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA2yxX3K8yOD8C7jGoWmfashTZPJeBVpj0aGKSYFIngZKgg2s-CRRN3yk1-F7pxLmRA4OFNl6ahX4idg"
+ 	   <script src= <!--Put your Google Maps API here-->
       type="text/javascript"></script>
 
 
